deploy/kubernetes/service.yml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: relay-webhook
  name: relay-webhook
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: relay-webhook
  type: ClusterIP
